# botc.gender

./: .gitignore  README.md  package-lock.json  pyproject.toml
.github/workflows/: deploy-web.yml  test.yml
cli/: README.md
cli/scripts/: update_data.sh
cli/src/botc_gender/: cli.py  data.py  images.py
cli/src/botc_gender/formats/: app_schema.py
cli/src/botc_gender/formats/strategies/: official_override.py
cli/tests/: test_gender.py  test_images.py  test_import_ready.py
cli/tests/fixtures/: shugenja.json  stormcatcher-goon.json
data/: characters-en.json  de-official.json  en-official.json  role-editions.json
data/gender/: keep-gendered-roles.yaml  neutral-roles.yaml  overrides.yaml  pronouns.yaml  replacements.yaml
scripts/: build_role_editions.py  merge_characters_en.py  patch_characters_en.py  update_data.sh
src/botc_gender/: cli.py  convert.py  data.py  gender.py  pdf_targets.py
src/botc_gender/formats/: app_schema.py  bloodstar.py
src/botc_gender/formats/strategies/: custom_suffix.py  types.py
tests/: test_gender.py  test_images.py  test_import_ready.py  test_replacements.py
tests/fixtures/: everyone-can-play.json
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: CNAME
web/scripts/: sync-data.mjs
web/src/: main.ts  style.css
web/src/lib/: appSchema.ts  contact.test.ts  contact.ts  convert.test.ts  convert.ts  data.ts  gender.ts  images.ts  scriptToolUrl.test.ts  scriptToolUrl.ts  strategies.ts
